welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: ';' expected but ')' found.
                                            if((a!=b)&&(a!=c))&&(b!=c)) {return 0}
                                                                      ^